--- a/VueDemo/VueDemo/VueDemo.csproj
+++ b/VueDemo/VueDemo/VueDemo.csproj
@@ -39,4 +39,8 @@
     <EmbeddedResource Include="host.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="WWW\" />
+  </ItemGroup>
+
 </Project>
