--- a/VueDemo/VueDemo/WWW/package.json
+++ b/VueDemo/VueDemo/WWW/package.json
@@ -1,12 +1,12 @@
-{
+﻿{
   "name": "parcel-vue",
   "version": "1.0.0",
-  "description": "零配置VUE开发模板，基于Parcel全新构建",
-  "author": "cheneyweb <457299596@qq.com>",
+  "description": "闆堕厤缃甐UE寮€鍙戞ā鏉匡紝鍩轰簬Parcel鍏ㄦ柊鏋勫缓",
+  "author": "鐚尓榄呮棤褰?<490912587@qq.com>",
   "main": "main.js",
   "license": "MIT",
   "scripts": {
-    "dev": "parcel index.html",
+    "dev": "parcel index.html -p 80",
     "build": "parcel build index.html --public-url / --no-source-maps"
   },
   "dependencies": {
