quasar前端库和.netcore实现的JWT接口结合

--- a/VueDemo/VueDemo/VueDemo.csproj
+++ b/VueDemo/VueDemo/VueDemo.csproj
@@ -39,4 +39,8 @@
     <EmbeddedResource Include="host.json" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="www\static\css\" />
+  </ItemGroup>
+
 </Project>
